--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -19,8 +19,8 @@ spring:
     mail:
         host: smtp.gmail.com
         port: 587
-        username: aeitiao@gmail.com
-        password: ehfiakyspzflnzkn
+        username: your@gmail.com
+        password: yourCodePass
         properties:
             mail:
                 smtp:
