--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -19,11 +19,13 @@ spring:
     mail:
         host: smtp.gmail.com
         port: 587
-        username: your@gmail.com
-        password: yourCodePass
+        username: aeitiao@gmail.com
+        password: efqouxwumhlodrje
         properties:
             mail:
                 smtp:
+                    ssl:
+                        trust: "*"
                     auth: true
                     starttls:
                         enable: true
